ubuntu-dev-tools (0.65) UNRELEASED; urgency=low

  [ Colin Watson ]
  * manage-credentials: Fix typo.

  [ Jonathan Davies ]
  * requestsync: Only check existing reports if the --lp flag is used.

 -- Jonathan Davies <jpds@ubuntu.com>  Mon, 16 Feb 2009 15:06:16 +0000

ubuntu-dev-tools (0.64) jaunty; urgency=low

  * Import urllib2 and sys in lp/functions.py, fixing requestsync.
  * Import ubuntutools.common explicitely in buildd and requestsync to get the
    https_proxy fix.

 -- Loic Minier <lool@dooz.org>  Fri, 06 Feb 2009 12:18:13 +0100

ubuntu-dev-tools (0.63) jaunty; urgency=low

  * debian/links: add it (forgot to do so before).
  * bash-completion/pbuilder-dist: recognize cowbuilder- and -jaunty.
  * pbuilder-dist:
     - Fixed a bug which broke pbuilder-dist when "build" was omited; just
       giving a .dsc works now.
     - {p,cow}builder-dist will now complain if you try to build a .changes
       file (or anything else that isn't a .dsc).

 -- Siegfried-Angel Gevatter Pujals <rainct@ubuntu.com>  Thu, 05 Feb 2009 16:19:03 +0100

ubuntu-dev-tools (0.62) jaunty; urgency=low

  * Fix ubuntutools.lp.libsupport import in lp-set-dup.

 -- Loic Minier <lool@dooz.org>  Wed, 04 Feb 2009 12:04:47 +0100

ubuntu-dev-tools (0.61) jaunty; urgency=low

  [ Terence Simpson ]
  * dgetlp: Replaced Bash version with a new Python script.

  [ Luca Falavigna ]
  * setup.py: install ubuntutools/lp files.

 -- Luca Falavigna <dktrkranz@ubuntu.com>  Tue, 03 Feb 2009 13:34:42 +0100

ubuntu-dev-tools (0.60) jaunty; urgency=low

  [ Jonathan Davies ]
  * ubuntutools/common.py: Now split into multiple files depending on
    function.
  * Adjusted imports on all files as necessary for the change above.
  * Removed ubuntutools/misc.py's mkdir function - superseded by
    os.makedirs().
  * dgetlp: Improved error message to show that dgetlp only accepts HTTP
    URLs (LP: #322051).

  [ Iain Lane ]
  * requestsync: Only attempt to change bug importance if in ubuntu-dev, as it