@@ -6,7 +6,13 @@ ubuntu-dev-tools (0.65) UNRELEASED; urgency=low
   [ Jonathan Davies ]
   * requestsync: Only check existing reports if the --lp flag is used.
 
- -- Jonathan Davies <jpds@ubuntu.com>  Mon, 16 Feb 2009 15:06:16 +0000
+  [ Luca Falavigna ]
+  * Add per-package upload permission checks:
+    - ubuntutools/lp/functions.py: implement isPerPackageUploader.
+    - requestsync: check if submitter has per-package upload permission
+      using isPerPackageUploader function and adjust report accordingly.
+
+ -- Luca Falavigna <dktrkranz@ubuntu.com>  Thu, 19 Feb 2009 23:55:04 +0100
 
 ubuntu-dev-tools (0.64) jaunty; urgency=low
 
